--- a/JsonParsingTest/appsettings.json
+++ b/JsonParsingTest/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Info"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PostgresConnection": ""
+  }
 }
