Fix issues with ElephantSql connect
Set up correct connection strings and set PostgresPersonService by using
DI. Note: still not using async DB communication.

--- a/JsonParsingTest/appsettings.json
+++ b/JsonParsingTest/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresConnection": ""
+    "PostgresConnection": "Server=balarama.db.elephantsql.com;Port=5432;Database=yflgorhm;User Id=yflgorhm;Password=oPyIXV4bT3IZZh_GEkK6QLWnYhLOX6PE;Timeout=5;CommandTimeout=5"
   }
 }
